# clinical-weak-labeling-pipeline

./: readme.md  readme.txt
NLP_DataExtract/: Step1_input_arguments.py  Step2_nlp_pipe.py  Step3_SnorkelPipe.py  VIP_FilePaths.csv
NLP_Package/: NLP_Package.pyproj  New Text Document.txt
NLP_Package/NLP_Main/: setup.cfg
NLP_Package/NLP_Main/src/NLP_pkg/: negation.py
NLP_Package/NLP_Main/src/NLP_pkg_OHI.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lib/: EncapLabelingFun.py  LabelingFun.py  NewLabelingFun.py  helper_fun.py  lemmatization.py  termsets.py
nlp-reports-v2/: readme.txt  requirements.txt
nlp-reports-v2/concept_extract_package/: README.md  pyproject.toml  setup.cfg
nlp-reports-v2/concept_extract_package/src/.ipynb_checkpoints/: EncapLabelingFun-checkpoint.py  helper_fun-checkpoint.py  make_rules_from_config-checkpoint.py  path_fun-checkpoint.py  spacy_extras-checkpoint.py
nlp-reports-v2/concept_extract_package/src/conceptextract/: keywds.py  lemmatization.py  make_rules_from_config.py  negation.py  nlp_extensions.py  termsets.py
nlp-reports-v2/concept_extract_package/src/conceptextract.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nlp-reports-v2/example_code/cmdline/: cmd_line_arguments.sh  make_configs_file_step0.py  run_nlp_pipeline_step1.py  run_snorkel_pipeline_step2.py
nlp-reports-v2/example_code/notebook/: README.txt  make_configs_file_step0.ipynb  run_nlp_pipeline_step1.ipynb  run_snorkel_pipeline_step2.ipynb
nlp-reports-v2/trial/: config.yaml
nlp-reports-v2/trial/data/: README.txt
