[metadata]
name = conceptextract
version = 0.0.1
author = Chad Hunter and Emily Workman
author_email = eworkman@mitre.org
description = A Syntactic Dependency Parser & Concept Extraction Method
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License

classifiers = 
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
python_requires = >=3.6

package_dir=
    =src
packages=find:

install_requires =
	spacy==3.0.5 
	snorkel==0.9.7
	scispacy==0.4.0
	pyyaml
	scikit-learn==0.24.1 
	omegaconf==2.1.1  
	tqdm==4.60.0
	pandas==1.1.5
	numpy==1.19.5

[options.packages.find]
where=src


